# argon

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  analyze.sh  conanfile.txt  format.sh  tidy.sh  vcpkg.json
.github/workflows/: cd.yml  ci.yml  cmake.yml
cmake/: argon-config.cmake
docs/: CMakeLists.txt  Mainpage.hpp
examples/: CMakeLists.txt  Example.cpp  example.cpp
include/: Options.h
include/Options/: Format.h  Option.h  Options.h  Parser.h  Types.h
include/argon/: Argument.h  Argument.hpp  Callbacks.h  Option.h  Option.hpp  Parser.h  Parser.hpp  Position.h  Position.hpp  argument.h  option.h  parser.h  position.h
src/: Argon.cpp  Argument.cpp  Option.cpp  Options.cpp  Parser.cpp  Position.cpp  argument.cpp  option.cpp  parser.cpp  position.cpp
test/: CMakeLists.txt  Example.cpp  UnitTests.cpp
tests/: Argument.cpp  CMakeLists.txt  FindCatch2.cmake  Main.cpp  Option.cpp  Parser.cpp  Position.cpp  UnitTests.cpp  unit_tests.cpp
